test-data/error/no-seed.hltas
version 1
frames
----------|------|------|0.001|-|-|1
seed 
